start revision of the kalman filter